<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="Fragments.TimerFragment">

    <TextView
        android:id="@+id/timer_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/timer_fragment"
        android:textColor="@color/lincoln_green"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:hint="@string/time_hint"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/timer_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_headline" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="serif"
        android:text="@string/enter_time"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />


    <EditText
        android:id="@+id/hour_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/timer_input"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/minute_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_text" />

    <EditText
        android:id="@+id/minute_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="2"
        android:gravity="center"
        android:hint="@string/timer_input"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_text" />


    <EditText
        android:id="@+id/second_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="2"
        android:gravity="center"
        android:hint="@string/timer_input"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minute_input"
        app:layout_constraintTop_toBottomOf="@+id/timer_text" />

    <TextView
        android:id="@+id/hour_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/hour_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/hour_input"
        app:layout_constraintStart_toStartOf="@+id/hour_input"
        app:layout_constraintTop_toBottomOf="@+id/hour_input" />

    <TextView
        android:id="@+id/minute_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/minute_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/minute_input"
        app:layout_constraintStart_toStartOf="@+id/minute_input"
        app:layout_constraintTop_toBottomOf="@+id/minute_input" />

    <TextView
        android:id="@+id/second_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/second_text"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/second_input"
        app:layout_constraintStart_toStartOf="@+id/second_input"
        app:layout_constraintTop_toBottomOf="@+id/second_input" />

    <ImageButton
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/lincoln_green"
        android:clickable="true"
        android:gravity="center"
        android:src="@drawable/ic_baseline_play_circle_filled_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/stop_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minute_text" />

    <ImageButton
        android:id="@+id/stop_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/lincoln_green"
        android:clickable="true"
        android:enabled="false"
        android:gravity="center"
        android:src="@drawable/ic_baseline_stop_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

</androidx.constraintlayout.widget.ConstraintLayout>