<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_white"
    tools:context="Fragments.ShoppingListFragment">


    <TextView
        android:id="@+id/shopping_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="serif-monospace"
        android:text="@string/shopping_list_fragment"
        android:textAlignment="center"
        android:textColor="@color/lincoln_green"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_product"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:hint="@string/product"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shopping_title" />

    <EditText
        android:id="@+id/add_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/add_product"
        app:layout_constraintTop_toTopOf="@id/add_product" />

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:backgroundTint="@color/lincoln_green"
        android:fontFamily="serif"
        android:text="+"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/add_amount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_amount"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shoppingListRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_product" />

</androidx.constraintlayout.widget.ConstraintLayout>